	* Added: TodoyuFormElement_Select->setNoPleaseSelect()
	* Added: TodoyuArray::prefixKeys()
	* Added: additional definition in form.xsd
	* Added: PanelWidgetSearchBox basic classes
	* Added: Prevent auto focus of first form element with form class noAutoFocus
	* Added: TodoyuFileManager::includeFile() was wrapper for include()/include_once()
	* Changed: extracted select-group-options from template
	* Changed: Renamed TodoyuArray::prefix() to prefixValues()
	* Changed: Removed $parseConstants from TodoyuArray::intExplode(). Was not used and supported. Added $limi parameter as for trimExplode()
	* Changed: Use js version instead of php the check for the first input in form
	* Changed: Update form XSD validation to match know field types only
	* Changed: Created instances for parsing form xml files to prevent overlapping when multiple forms are parsed parallel
	* Changed: Group label of selectgrouped is now parsed as label
	* Changed: Removed unused parameter $preParseValues from form instantiation
	* Changed: Added $formData as default $params value in form instantiation
	* Changed: Parse label for grouped select options
	* Changed: Cleanup radio form element. Removed sql as source type. Support default value
	* Changed: Clone field objects when added to a fieldset. Allows to add a field multiple times under different names
	* Changed: Clone fieldsets when added to a form or another fieldset
	* Library: Upgraded from PHPMailer-lite 5.1 to PHPMailer 5.2.1
	* Library: Highcharts 2.2.3
	* Library: tinyMCE 3.5.0.1

core 2.2.0 - 2012-05-03
	* Added: Parity of list items in widgets is refreshed on drop/resort
	* Added: Balloon info rendering, style and JS
	* Added: Hooks in TodoyuMail
	* Added: Empty listing shows "no items" notice
	* Added: Special chars encoding of CSV exported data
	* Added: Added core hook of loaded extension type configs: 'loadconfig.extkey.type'
	* Added: Installer now focuses it's first form field on page load